[gd_scene load_steps=10 format=2]

[ext_resource path="res://Stars.gd" type="Script" id=1]
[ext_resource path="res://Wizard Pack/Godot-particle-and-vfx-textures/textures/64/alpha/spotlight_5.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.00980392, 0.161765, 0.789216, 1 )
colors = PoolColorArray( 0.360784, 0.870588, 1, 1, 0.423529, 0.94902, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.360043, 0.810469 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 0.01
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 200.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 10.0
radial_accel_random = 1.0
tangential_accel = -80.0
damping = 10.0
angle = -720.0
scale = 0.25
scale_curve = SubResource( 5 )
color = Color( 0.305882, 0.890196, 1, 1 )
color_ramp = SubResource( 3 )

[sub_resource type="CircleShape2D" id=7]
radius = 3.0

[node name="Stars" type="Area2D"]
z_index = 3
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 1 )
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Stars_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Stars_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
